# gatewayaivectormemory

./: .gitignore  AGENTS.md  LICENSE  README.md  opencode.json  pyproject.toml
.kiro/hooks/: agent-stop-checklist.kiro.hook  dev-workflow-check.kiro.hook  pre-tool-use-check.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: aivectormemory.md
.opencode/plugins/: aivectormemory-pre-tool-check.js
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.zh-TW.md
gatewayaivectormemory/: __init__.py  __main__.py  config.py
gatewayaivectormemory/db/: __init__.py  connection.py  issue_repo.py  memory_repo.py  schema.py  state_repo.py  task_repo.py  team_memory_repo.py  user_memory_repo.py
gatewayaivectormemory/embedding/: __init__.py  engine.py  server.py
gatewayaivectormemory/proxy/: app.py  auth.py  routes.py  (+1 more)
scripts/: _rename_env.py  find_group5_tasks.py  find_group7_ids.py  find_group7_tasks.py  migrate_data.py  rename_batch.py  rename_readme.py  rename_remaining.py  rename_run_cmd.py  start_dashboard.sh  sync_tasks_md.py  test_auth_proxy.py  test_embed_engine_modes.py  test_embed_import.py  test_embed_local_and_fallback.py  test_embed_remote.py  test_embed_remote2.py  test_embed_server.py  test_embed_service.py  test_import.py  test_integration.py  test_memory_proxy.py  test_proxy_502.py  test_proxy_diag.py  test_proxy_direct.py  test_proxy_inline.py  test_proxy_raw.py  test_proxy_start.py  test_proxy_wait.py  test_web_dashboard.py  test_web_dashboard_e2e.py  verify_pg_schema.py  verify_tools_handlers.py  verify_tools_layer.py
(+21 files in other folders)
